--- a/contracts/solidity/dashboard/package.json
+++ b/contracts/solidity/dashboard/package.json
@@ -17,21 +17,17 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^2.1.1",
-    "require-symlink": "^0.2.0",
     "truffle": "^5.0.10",
     "web3": "^1.0.0-beta.51"
   },
   "scripts": {
     "build-css": "lessc --clean-css src/css/app.less src/app.css",
     "watch-css": "npm run build-css && less-watch-compiler src/css src app.less",
-    "start-js": "require-link && react-scripts start",
+    "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "require-link && npm run build-css && react-scripts build",
-    "test": "require-link && react-scripts test --env=jsdom",
+    "build": "npm run build-css && react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "requireSymlinks": {
-    "contracts": "../build/contracts"
   },
   "browserslist": [
     ">0.2%",
