--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,9 +316,9 @@ workflows:
             - migrate_contracts
             - build_client_and_test_go
       - migrate_contracts:
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - build_client_and_test_go
@@ -343,9 +343,9 @@ workflows:
           requires:
             - migrate_contracts
       - publish_staking_dapp:
-          # filters:
-          #   branches:
-          #     only: master
+          filters:
+            branches:
+              only: master
           context: keep-dev
           requires:
             - build_staking_dapp
