--- a/contracts/solidity/dashboard/package.json
+++ b/contracts/solidity/dashboard/package.json
@@ -18,7 +18,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^2.1.1",
     "truffle": "^5.0.10",
-    "web3": "^1.0.0-beta.51"
+    "web3": "^1.2.4"
   },
   "scripts": {
     "build-css": "lessc --clean-css src/css/app.less src/app.css",
