--- a/contracts/solidity/dashboard/package.json
+++ b/contracts/solidity/dashboard/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1",
+    "react-transition-group": "^4.3.0",
     "truffle": "^5.0.10",
     "web3": "^1.2.4"
   },
