--- a/solidity/ecdsa/package.json
+++ b/solidity/ecdsa/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "@keep-network/random-beacon": "development",
     "@keep-network/sortition-pools": "^2.0.0-pre.9",
+    "@openzeppelin/contracts": "~4.5.0",
     "@openzeppelin/contracts-upgradeable": "~4.6.0",
     "@threshold-network/solidity-contracts": ">1.2.0-dev <1.2.0-ropsten"
   },
