--- a/solidity/random-beacon/package.json
+++ b/solidity/random-beacon/package.json
@@ -40,7 +40,7 @@
     "@defi-wonderland/smock": "^2.0.7",
     "@keep-network/hardhat-helpers": "0.4.1-pre.1",
     "@keep-network/hardhat-local-networks-config": "^0.1.0-pre.0",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@tenderly/hardhat-tenderly": "^1.0.12",
     "@thesis-co/eslint-config": "github:thesis/eslint-config",
