--- a/solidity/ecdsa/package.json
+++ b/solidity/ecdsa/package.json
@@ -33,9 +33,9 @@
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
-    "@keep-network/hardhat-helpers": "^0.5.1",
+    "@keep-network/hardhat-helpers": "^0.6.0-pre.4",
     "@keep-network/hardhat-local-networks-config": "^0.1.0-pre.4",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "@tenderly/hardhat-tenderly": "^1.0.13",
