--- a/solidity/random-beacon/.eslintrc
+++ b/solidity/random-beacon/.eslintrc
@@ -4,7 +4,7 @@
   "rules": {
     "import/no-extraneous-dependencies": [
       "error",
-      { "devDependencies": ["./test/**/*.ts", "hardhat.config.ts"] }
+      { "devDependencies": ["./test/**/*.ts", "hardhat.config.ts", "./tasks/*.ts"] }
     ],
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-explicit-any": "warn",
