--- a/.github/workflows/contracts-ecdsa.yml
+++ b/.github/workflows/contracts-ecdsa.yml
@@ -252,14 +252,7 @@ jobs:
 
       - name: Deploy contracts
         env:
-          # Using fake ternary expression to decide which credentials to use,
-          # depending on chosen environment. Note: if `GOERLI_ETH_HOSTNAME_HTTP`
-          # is empty, the expression will be evaluated to
-          # `SEPOLIA_ETH_HOSTNAME_HTTP`'s value.
-          CHAIN_API_URL: |
-            ${{ inputs.github.event.inputs.environment == 'goerli'
-              && secrets.GOERLI_ETH_HOSTNAME_HTTP
-              || secrets.SEPOLIA_ETH_HOSTNAME_HTTP }}
+          CHAIN_API_URL: ${{ secrets.SEPOLIA_ETH_HOSTNAME_HTTP }}
           ACCOUNTS_PRIVATE_KEYS: ${{ secrets.TESTNET_ETH_CONTRACT_OWNER_PRIVATE_KEY }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
         run: yarn deploy --network ${{ github.event.inputs.environment }}
@@ -347,14 +340,7 @@ jobs:
       
       - name: Deploy contracts
         env:
-          # Using fake ternary expression to decide which credentials to use,
-          # depending on chosen environment. Note: if `GOERLI_ETH_HOSTNAME_HTTP`
-          # is empty, the expression will be evaluated to
-          # `SEPOLIA_ETH_HOSTNAME_HTTP`'s value.
-          CHAIN_API_URL: |
-            ${{ inputs.github.event.inputs.environment == 'goerli'
-              && secrets.GOERLI_ETH_HOSTNAME_HTTP
-              || secrets.SEPOLIA_ETH_HOSTNAME_HTTP }}
+          CHAIN_API_URL: ${{ secrets.SEPOLIA_ETH_HOSTNAME_HTTP }}
           ACCOUNTS_PRIVATE_KEYS: ${{ secrets.DAPP_DEV_TESTNET_ETH_CONTRACT_OWNER_PRIVATE_KEY }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
         run: yarn deploy --network ${{ github.event.inputs.environment }}
