Change large deposit/redemption threshold for `tbtc-v2-monitoring`
New values are
- 100 BTC for mainnet deposits and redemptions
- 10 BTC for testnet deposits and redemptions

--- a/infrastructure/kube/keep-test/tbtc-v2-monitoring/kustomization.yaml
+++ b/infrastructure/kube/keep-test/tbtc-v2-monitoring/kustomization.yaml
@@ -10,7 +10,8 @@ configMapGenerator:
   - name: tbtc-v2-monitoring-config
     literals:
       - environment=testnet
-      - large-deposit-threshold-sat=10000000 # 0.1 BTC for testing purposes
+      - large-deposit-threshold-sat=1000000000 # 10 BTC
+      - large-redemption-threshold-sat=1000000000 # 10 BTC
 
 secretGenerator:
   - name: tbtc-v2-monitoring-config
